# os_course_works

./: .gitignore  CMakeLists.txt  README.md  linker_loader.ld  linker_main.ld  loader_files.txt
course_work/: build.sh  files.txt  gen_primes.c  gen_primes.h  main_prog.c  main_prog.h  melody.h  move_obj.c  move_obj.h  play_melody.c  play_melody.h  print_info.c  print_info.h  semaphore.c  semaphore.h
labs/1/: 1_2.patch  1_3.patch  1_4.patch
labs/1/1_1/: build.sh  files.txt  main_prog.c
labs/1/1_2/: build.sh  files.txt  main_prog.c
labs/1/1_3/: build.sh  files.txt  main_prog.c
labs/1/1_4/: build.sh  files.txt  main_prog.c
labs/2/: 2_2.patch  2_3.patch
labs/2/2_1/: build.sh  files.txt  main_prog.c  melody.h
labs/2/2_2/: build.sh  files.txt  main_prog.c  melody.h
labs/2/2_3/: build.sh  files.txt  main_prog.c
labs/3/3_1/: build.sh  files.txt  main_prog.c
labs/3/3_2/: build.sh  files.txt  main_prog.c
labs/4/: 4_2.patch  4_3.patch
labs/4/4_1/: build.sh  files.txt  main_prog.c
labs/4/4_2/: build.sh  files.txt  main_prog.c  spinlock.h
labs/4/4_3/: atomic.h  build.sh  files.txt  main_prog.c  sleep.h  spinlock.c
labs/5/5_1/: build.sh  edit.patch  files.txt  main_prog.c  main_prog_old.c
lib/: common.c  common.h  common2.c  common2.h  common_defs.h  common_prog.c  common_prog.h  console_io.c  console_io.h  interrupts.c  interrupts.h  math.c  math.h  pc_speaker.c  pc_speaker.h  prologue.c  stages.h  string.c  string.h
loader/: stage1.c  stage2.c
